# LinearObjects

./: .gitignore  CMakeLists.txt  README.md
include/: Matrix.hpp  SquareMatrix.hpp  Vector.hpp
src/: Matrix.cpp  SquareMatrix.cpp  Vector.cpp
